# ScreenTime

./: README.md  package-lock.json  package.json
src/: App.jsx  App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/classes/: screen_time_app.rs
src-tauri/src/commands/: change_display_name.rs  change_hidden.rs  get_screen_time_app_by_name.rs  get_screen_time_apps.rs  get_screen_time_apps_sorted.rs
src-tauri/src/event_handlers/: focus_change_event.rs  focus_keep_event.rs  process_start_event.rs  process_stop_event.rs
src-tauri/src/listeners/: focus_change_listener.rs  process_listener.rs
src-tauri/src/utils/: date_utils.rs  static_manager.rs  storage_utils.rs
src/components/: AppDetailComponent.vue  AppsComponent.vue  ModalComponent.vue  SettingsComponent.vue  SidebarComponent.vue
src/utils/: dateUtils.js  timeUtils.js
