[package]
name = "screentime"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.38"
lazy_static = "1.5.0"
sysinfo = "0.30.12"
windows-sys = { version = "0.52.0", features = ["Win32", "Win32_Foundation", "Win32_UI", "Win32_UI_WindowsAndMessaging"] }
dirs = "5.0.1"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
