[package]
name = "screentime"
version = "0.1.0"
description = "An app that lets you monitor your usage of programs"
authors = ["silentesc"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open", "system-tray"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.38"
lazy_static = "1.5.0"
sysinfo = "0.30.12"
windows-sys = { version = "0.52.0", features = ["Win32", "Win32_Foundation", "Win32_UI", "Win32_UI_WindowsAndMessaging"] }
dirs = "5.0.1"
single-instance = "0.3.3"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
